app/styles/account_details.scss
.goods_detail_info {
  height: 93vh;
}

.client_info {
  height: 93vh;
}

.new-user-section {
  .user_title select {
    width: 100%;
  }

  .user_title select {
    width: 100%;
  }

  .input-error {
    background: #ED4C4E;
    color: white;
    padding: 0.2rem;
    display: none;
    padding-bottom: 0.25rem !important;
    width: 98.7%;
    float: left !important;

    @media #{$small-only} {
      font-size: 0.65rem;
      margin-left: 0.3rem;
      width: 98%;
    }

    @media #{$medium-only} {
      width: 98% !important;
      margin-left: 0.25rem;
    }

    @media #{$large-only} {
      width: 98.3%;
      margin-left: 0.6rem;
    }
  }

  .form__control.form__control--error .input-error {
    display: block;
  }

  .description-block .form__control.form__control--error .input-error {
    margin-top: -2%;
  }

  .row {
    margin-top: 0.5rem !important;

    @media #{$small-only} {
      margin-right: 0rem !important;
    }
  }

  .item-label {
    line-height: 1.8rem;
  }

  .dimension-row {
    .value {
      padding: 0;

      input {
        width: 80%;
        display: inline-block;
        padding-left: 1.5rem !important;
      }

      span {
        .fa {
          margin-left: 0.5rem;
        }

        margin-left: 0.1rem;
      }

      span.input_text {
        position: absolute;
        font-size: 0.8rem;
        color: white;
        line-height: 1.8rem;
        padding-left: 0.1rem;
      }
    }

    .value.length {
      padding-left: 0.3125rem;
    }

    .value.height input {
      width: 97%;

      @media #{$small-only} {
        width: 93%;
      }
    }
  }

  .quality-row {
    span.input_text {
      position: absolute;
      font-size: 0.8rem;
      color: white;
      line-height: 1.8rem;
      padding-left: 0.5rem;
      z-index: 10;
    }

    .grade select {
      padding-left: 3.5rem !important;
    }

    .condition select {
      padding-left: 4.8rem !important;
    }
  }

  input,
  select {
    padding: 0 0.5rem;
    background: #002352 !important;
    border: 1px solid white !important;
    color: white;
    height: 2.7rem !important;
  }

  textarea {
    margin: 0;
    max-width: 100%;
    padding: 0.3rem 0.5rem;
    background: #002352 !important;
    border: 1px solid $tabbar-menu-icon-color !important;
    color: white;
    padding-right: 1.5rem;
  }

  .remove-text {
    position: absolute;
    right: 3%;
    font-size: 1rem;
    padding: 0.4rem 0.3rem;
    cursor: pointer;
  }

  .image-box-row {

    input,
    .input-error {
      width: 89%;
    }
  }

  .image-box {
    float: right;

    margin-top: 0.5rem;
    margin-right: 0.4rem;
    background-color: #334f75;
    text-align: center;
    position: absolute;

    height: 4.1rem;

    right: 17.5%;
    width: 8%;
    font-size: 0.8rem;
    z-index: 100;

    @media #{$medium-only} {
      width: 12%;
      right: 18.7%;
      right: 0;
    }

    @media #{$small-only} {
      width: 21%;
      right: 0;
      font-size: 0.68rem;
      padding-top: 0.3rem;
    }

    i {
      font-size: 1.5rem;
      padding: 0.5rem 1rem 0.2rem;
      width: 100%;
    }

    img {
      margin-top: -0.3rem;
      height: 4.1rem;
      width: 5rem;
    }
  }

  .scan-icon i {
    color: $tabbar-menu-icon-color;
    font-size: 1.5rem;
    padding: 0.15rem 0.4rem;
  }

  .inventory-number {
    color: $tabbar-menu-icon-color;
    line-height: 1.8rem;
    font-size: 0.8rem;

    input {
      width: 80%;
      display: inline-block;
    }

    a.options-link {
      float: right;
      font-size: 1.5rem;
      padding: 0 0.7rem;
      color: $tabbar-menu-icon-color !important;
    }
  }

  .mobile .dialing-code label {
    @media #{$small-only} {
      font-size: 0.59rem;
    }
  }

  .save_button {
    height: 3.5rem;
    width: 3.5rem;
    background: red;
    bottom: 0;
    right: 0;
    position: fixed;
    border-radius: 50%;
    margin-right: 2rem;
    cursor: pointer;
  }

  .save_button i {
    margin-left: .3rem;
    padding: .9rem;
    color: white;
    font-weight: 600;
  }

  .search_organisation,
  #organisation_details {
    text-decoration: none;
    cursor: pointer;
  }
}

.verified_icon {
  float: left !important;

  .verified_text {
    margin: 5%;
    font-size: 0.8em;
  }
}

